--- a/index.html
+++ b/index.html
@@ -23,7 +23,14 @@
         </div>
         <div class="navbar__s3">
             <p>Courses</p>
-            <p>My Learning</p>
+            <!-- <p>My Learning</p> -->
+             <div class="mylearning">
+                <p>My Learning</p>
+                <div class="mylearning__popup">
+                    <p>You did not purchase anything yet</p>
+
+                </div>
+             </div>
             <i class="fa-solid fa-cart-shopping fa-bounce"></i>
             <i class="fa-solid fa-bell fa-shake"></i>
             <i class="fa-solid fa-user"></i>
@@ -43,6 +50,10 @@
     <!-- Sale Image Section -->
     <div class="sale-image">
         <img src="./images/sale-image.jpeg" alt="Sale Image">
+        <div class="sale-image__offer">
+            <h2>Udemy Flash Sale! 24 hours to save.</h2>
+            <p>Get the top courses for just 499. Just one day to save but a lifetime to learn</p>
+        </div>  
     </div>
 
     <!-- Recommended Courses Section -->
